only resize textarea vertically to avoid layout issues

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -109,6 +109,7 @@ body {
 }
 
 .textarea {
+  resize: vertical;
   width: 500px;
   height: 150px;
 }
